# drugTracker2

./: .editorconfig  .gitignore  .hlint.yaml  Main.hs  README.adoc  README.md  drug2.cabal  flake.nix  home-manager.nix  nixos.nix  package.nix  shell.nix  treefmt.nix
.github/workflows/: build.yml  update-flake.yml
app/: Main.hs
src/: Config.hs  ConfigAndTypes.hs  Create.hs  Lib.hs  List.hs  LoadConfig.hs  ParseConfig.hs  Remind.hs  Table.hs  Take.hs  TemplateLib.hs  Time.hs  Types.hs  Version.hs
src/commands/: Create.hs  Disable.hs  Enable.hs  EnableDisable.hs  Json.hs  List.hs  Remind.hs  Start.hs  Status.hs  Stop.hs  Take.hs
