cabal-version:   2.4
name:            drug2
version:         0
build-type:      Simple
author:          saygo-png
maintainer:      saygo-png <saygo.mail@proton.me>
copyright:       2024 saygo-png
description:     Keep track of when you last took your meds.
tested-with:     GHC ==9.8.4

common common-options
  build-depends:
    base,
    bytestring,
    cassava,
    text,
    vector,
    optparse-applicative,
    path-io,
    typed-process,
    ansi-terminal,
    aeson,
    template-haskell,
    vector-algorithms,
    path,
    time,
    containers,
    unix,
    classy-prelude,
    pretty-relative-time

  default-language: GHC2021
  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -threaded
  default-extensions: NoImplicitPrelude BangPatterns BinaryLiterals ConstraintKinds DataKinds DefaultSignatures DeriveDataTypeable DeriveFoldable DeriveFunctor DeriveGeneric DeriveTraversable DoAndIfThenElse EmptyDataDecls ExistentialQuantification FlexibleContexts FlexibleInstances FunctionalDependencies GADTs GeneralizedNewtypeDeriving InstanceSigs KindSignatures LambdaCase MultiParamTypeClasses MultiWayIf NamedFieldPuns OverloadedStrings PartialTypeSignatures PatternGuards PolyKinds RankNTypes RecordWildCards ScopedTypeVariables StandaloneDeriving TupleSections TypeFamilies TypeSynonymInstances ViewPatterns

library
  import: common-options
  hs-source-dirs: src, src/commands
  exposed-modules: List, Start, Stop, Take, Remind, Create,
                   Types, Lib, TemplateLib, Time, ParseConfig, LoadConfig

executable drug
  import: common-options
  ghc-options: -rtsopts -with-rtsopts=-N
  hs-source-dirs: app
  main-is: Main.hs
  build-depends: drug2
